Return linked profiles from user profile API
